--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "main": "index.js",
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
+    "@storybook/addon-links": "^4.1.6",
     "babel-polyfill": "^6.26.0",
     "normalize.css": "^7.0.0",
     "react": "^16.1.1",
@@ -109,6 +110,7 @@
     "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.4.0",
     "standard-version": "^4.3.0",
+    "storybook-addon-specifications": "^2.1.2",
     "style-loader": "^0.23.0",
     "stylelint": "^8.4.0",
     "stylelint-config-standard": "^18.0.0",
