--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "babel-polyfill": "^6.26.0",
     "normalize.css": "^7.0.0",
     "react": "^16.1.1",
+    "react-click-outside": "^3.0.1",
     "react-dom": "^16.1.1",
     "react-redux": "^5.0.5",
     "react-router": "^3.0.5",
