--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "normalize.css": "^7.0.0",
     "react": "^16.1.1",
     "react-click-outside": "^3.0.1",
+    "react-container-helper": "^0.3.3",
+    "react-device-detect": "^1.6.1",
     "react-dom": "^16.1.1",
     "react-redux": "^5.0.5",
     "react-router": "^3.0.5",
