--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-device-detect": "^1.6.2",
     "react-dom": "^16.1.1",
     "react-redux": "^5.0.5",
+    "react-responsive-modal": "^3.5.1",
     "react-router": "^3.0.5",
     "react-router-redux": "^4.0.8",
     "redux": "^3.7.1",
