--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-container-helper": "^0.3.3",
     "react-device-detect": "^1.6.2",
     "react-dom": "^16.1.1",
+    "react-id-swiper": "^1.6.8",
     "react-redux": "^5.0.5",
     "react-responsive-modal": "^3.5.1",
     "react-router": "^3.0.5",
