--- a/.stylelintrc
+++ b/.stylelintrc
@@ -8,9 +8,7 @@
 		"indentation": "tab",
 		"at-rule-no-vendor-prefix": true,
 		"media-feature-name-no-vendor-prefix": true,
-		"property-no-vendor-prefix": true,
 		"selector-no-vendor-prefix": true,
-		"value-no-vendor-prefix": true,
 		"declaration-no-important": true,
 		"order/properties-order": [
 			[ "composes", "display" ] , { "unspecified": "bottom" }
@@ -24,6 +22,10 @@
 		"at-rule-no-unknown": [
 			true, { "ignoreAtRules": [ "value" ] }
 		],
+		"value-no-vendor-prefix": [
+			true, { "ignoreValues": [ "box" ] }
+		],
+		"no-descending-specificity": null
 	},
 	"ignoreFiles": [
 		"node_modules",
